style(web): fix spacing for the sort by and per page links

--- a/apps/web/src/app/sass/style.scss
+++ b/apps/web/src/app/sass/style.scss
@@ -500,10 +500,6 @@ $font-family: arial, helvetica, sans-serif;
 	padding: 5px !important;
 }
 
-.sort-pagination-link {
-	display: inline-block !important;
-}
-
 .pins-case-details {
 	.govuk-summary-list__row > .govuk-summary-list__key {
 		white-space: normal;
